tests/errors/test_81.x
// Unknown method

fn main() -> void {
	let x = 21;
	x.unknown_method();
}
